--- a/src/styles.css
+++ b/src/styles.css
@@ -26,8 +26,8 @@ body {
 
 .input-wrp {
   width: 40%;
-  margin: 0 auto;
-  margin-top: 100px;
+  margin:  auto;
+  margin-top: 150px;
 }
 
 .search-input {
